# risc-v-simulator

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
common/: macro.h
include/: sim_memory.h
simulator/: CMakeLists.txt  main.cpp  simulator.cpp  simulator.h
simulator/cpu/: CMakeLists.txt  cpu.h  instruction.cpp  instruction.h
simulator/elf-loader/: elf_loader.cpp  elf_loader.h
simulator/interpreter/: interpreter.cpp
simulator/memory/: CMakeLists.txt  cache.cpp  cache.h  memory.cpp  memory.h  mmu.cpp  mmu.h  sim_memory.cpp  sim_memory.h
sources/common/: main.cpp
sources/memory/: sim_memory.cpp
tests/: CMakeLists.txt  fibbonacci.c  fibbonacci_decoded_ref.hex  fibbonacci_elf_load_ref.dump  fibbonacci_riscv  fibbonaci_elf_segments_reference.sim  test_elf_load.cpp  test_for_integer.out  tests.cpp
tests/elfs/: fibbonacci_riscv_110  fibbonacci_riscv_1500  fibbonacci_riscv_900
